# document-chat-assistant

./: .dockerignore  .env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: __init__.py  auth.py  documents.py  messages.py
app/clients/: gemini_client.py
app/core/: config.py  dependencies.py  errors.py  security.py
app/db/: mongo.py  postgres.py
app/db/migrations/: env.py
app/db/migrations/versions/: 6378b164d540_fix_conversation_document_id_to_uuid_.py  9dc58cbac173_initial_tables_users_conversations_.py
app/middleware/: request_id.py
app/models/: __init__.py  conversation.py  document.py  message.py  mixins.py  user.py
app/repositories/: __init__.py  base_repository.py  conversation_repository.py  document_repository.py  message_repository.py  user_repository.py
app/schemas/: auth.py  chat.py  documents.py
app/services/: auth_service.py  chat_service.py  document_service.py
app/utils/: pdf_processor.py
docker/: alembic-entrypoint.sh  mongo-init.js  wait-for.sh
tests/: conftest.py  test_auth.py  test_documents.py  test_messages.py
