[project]
name = "document-chat-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "sinan tan",email = "sinantanwork@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn[standard] (>=0.36.0,<0.37.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pymongo (>=4.15.1,<5.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pypdf (>=6.0.0,<7.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "slowapi (>=0.1.9) ; python_version >= \"3.11\" and python_version < \"4.0\"",
    "jwt (>=1.4.0,<2.0.0)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "motor (>=3.7.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
ruff = "^0.13.1"
black = "^25.9.0"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

